--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
 
   <body>
     <header>
-      <!-- place navbar here -->
+      <h1>MadLibs</h1>
     </header>
-    <main></main>
+    <main>
+      <div id="story">
+        <!-- <button onclick="speak()">speaktest</button> -->
+      </div>
+    </main>
     <footer>
       <!-- place footer here -->
     </footer>
