keep trying to make it waterfal

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </header>
     <main>
       <div id="story">
+        <div id="no-console"></div>
         <!-- <button onclick="speak()">speaktest</button> -->
       </div>
     </main>
