made loading wheel, finish with alerts

--- a/index.html
+++ b/index.html
@@ -30,9 +30,15 @@
         <!-- <button onclick="speak()">speaktest</button> -->
       </div>
     </main>
-    <footer>
-      <!-- place footer here -->
-    </footer>
+
+    <div class="extras">
+      <div id="initializing">
+        Initializing
+        <div id="loading"></div>
+      </div>
+      <div id="prompt"></div>
+    </div>
+
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
