made ellipsis function, GOD I HATE JAVASCRIPT SO MUCH SOMETIMES

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     </header>
     <main>
       <div id="story">
-        <div id="no-console"></div>
         <!-- <button onclick="speak()">speaktest</button> -->
       </div>
     </main>
 
     <div class="extras">
       <div id="initializing">
-        Initializing
+        <p id="InP">Initializing</p>
+        <div id="no-console"></div>
         <div id="loading"></div>
       </div>
       <div id="prompt"></div>
