working on multiple sections, make start menu and start button with initialize screen correctly working

--- a/index.html
+++ b/index.html
@@ -21,13 +21,40 @@
 
   <body>
     <div id="bg"></div>
-    <header>
-      <h1>MadLibs</h1>
-    </header>
-    <main>
-      <div id="story">
-        <!-- <button onclick="speak()">speaktest</button> -->
+    <main id="open"></main>
+    <main id="menu">
+      <header>
+        <h1>MadLibs</h1>
+      </header>
+      <div class="card">
+        <img class="card-img-top" src="holder.js/100x180/" alt="Title" />
+        <div class="card-body">
+          <h4 class="card-title">Story1</h4>
+          <p class="card-text">Text</p>
+        </div>
       </div>
+      <div class="card">
+        <img class="card-img-top" src="holder.js/100x180/" alt="Title" />
+        <div class="card-body">
+          <h4 class="card-title">Story2</h4>
+          <p class="card-text">Text</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="holder.js/100x180/" alt="Title" />
+        <div class="card-body">
+          <h4 class="card-title">Story3</h4>
+          <p class="card-text">Text</p>
+        </div>
+      </div>
+      <!-- <div id="story"> -->
+      <!-- <button onclick="speak()">speaktest</button> -->
+      <!-- </div> -->
+    </main>
+    <main id="stories">
+      <div id="story1"></div>
+      <div id="story2"></div>
+      <div id="story3"></div>
     </main>
 
     <div class="extras">
