working on setup

--- a/index.html
+++ b/index.html
@@ -21,46 +21,16 @@
 
   <body>
     <div id="bg"></div>
-    <main id="open"></main>
-    <main id="menu">
-      <header>
-        <h1>MadLibs</h1>
-      </header>
-      <div class="card">
-        <img class="card-img-top" src="holder.js/100x180/" alt="Title" />
-        <div class="card-body">
-          <h4 class="card-title">Story1</h4>
-          <p class="card-text">Text</p>
-        </div>
-      </div>
-      <div class="card">
-        <img class="card-img-top" src="holder.js/100x180/" alt="Title" />
-        <div class="card-body">
-          <h4 class="card-title">Story2</h4>
-          <p class="card-text">Text</p>
-        </div>
-      </div>
-      <div class="card">
-        <img class="card-img-top" src="holder.js/100x180/" alt="Title" />
-        <div class="card-body">
-          <h4 class="card-title">Story3</h4>
-          <p class="card-text">Text</p>
-        </div>
-      </div>
-      <!-- <div id="story"> -->
-      <!-- <button onclick="speak()">speaktest</button> -->
-      <!-- </div> -->
-    </main>
-    <main id="stories">
-      <div id="story1"></div>
-      <div id="story2"></div>
-      <div id="story3"></div>
-    </main>
+    <div id="no-console"></div>
+    <div class="container-fluid">
+      <main id="opening"></main>
+      <main id="stories"></main>
+      <div id="content"></div>
+    </div>
 
     <div class="extras">
       <div id="initializing">
         <p id="InP">Initializing</p>
-        <div id="no-console"></div>
         <div id="loading"></div>
       </div>
       <div id="prompt"></div>
