work later on opening

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <div id="bg"></div>
     <div id="no-console"></div>
     <div class="container-fluid">
-      <main id="opening"></main>
+      <main id="opening">
+        <h1>MadLibs</h1>
+        <div class="button"></div>
+      </main>
       <main id="stories"></main>
       <div id="content"></div>
     </div>
