worked on cards

--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
                 alt="Title"
               />
               <div class="card-body">
-                <h4 class="card-title">Broccoli Cheddar Soup</h4>
-                <p class="card-text">Text</p>
+                <h4 class="card-title">Broccoli Soup</h4>
               </div>
-            </div>
+            </div> 
           </div>
           <div class="col-12 col-md-6 col-lg-3 mb-3">
             <div class="card">
@@ -55,8 +54,7 @@
                 alt="Title"
               />
               <div class="card-body">
-                <h4 class="card-title">In-flight Announcement</h4>
-                <p class="card-text">Text</p>
+                <h4 class="card-title">Announcement</h4>
               </div>
             </div>
           </div>
@@ -69,7 +67,6 @@
               />
               <div class="card-body">
                 <h4 class="card-title">Job Interview</h4>
-                <p class="card-text">Text</p>
               </div>
             </div>
           </div>
@@ -81,8 +78,7 @@
                 alt="Title"
               />
               <div class="card-body">
-                <h4 class="card-title">Olympic Reporter</h4>
-                <p class="card-text">Text</p>
+                <h4 class="card-title">Olympic News</h4>
               </div>
             </div>
           </div>
