--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-3 mb-3">
+          <div class="col-12 col-md-6 col-lg-3 mb-3" onclick="go('ann')">
             <div class="card">
               <img
                 class="card-img-top img-fluid"
