WHY ARE THERE SO MANY PROBLEMS? Output is nonexistent, the switch case don't work, and for some reason I have ghost code!!!

--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
       <div id="content" class="z-1"></div>
       <div class="extras">
         <div id="initializing" class="z-5">
-          <p id="InP">Initializing</p>
+          <p id="InP">Dogs</p>
           <div id="loading"></div>
         </div>
         <div class="row">
-          <div id="prompt" class="col-4">
+          <div id="prompt" class="col-6 col-lg-4">
             <h1 id="header">Hello</h1>
             <div class="inputs">
               <input type="text" id="textInp" />
