fixed ghost code!

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div id="content" class="z-1"></div>
       <div class="extras">
         <div id="initializing" class="z-5">
-          <p id="InP">Dogs</p>
+          <p id="InP">Initializing</p>
           <div id="loading"></div>
         </div>
         <div class="row">
