--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     <div id="no-console"></div>
     <div class="container-fluid">
       <main id="opening" class="z-3">
-        <h1 class="d-none d-sm-block">MadLibs</h1>
-        <h1 class="d-block d-sm-none">Mad<br />Libs</h1>
+        <h1>MadLibs</h1>
         <div class="button" onclick="toStories()">
           <div class="triangle"></div>
         </div>
@@ -91,13 +90,13 @@
           <div id="loading"></div>
         </div>
         <div class="row">
-          <div id="prompt" class="col-6 col-lg-4">
+          <div id="prompt" class="col-10 col-md-6 col-lg-4">
             <h1 id="header">Hello</h1>
             <div class="inputs">
               <input type="text" id="textInp" />
               <input type="submit" id="submit" onclick="entered()" />
             </div>
-          </div>
+            <div id="counter"></div>
         </div>
       </div>
     </div>
