--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <main id="stories" class="z-2">
         <h1>Stories</h1>
         <div class="row">
-          <div class="col-12 col-md-6 col-lg-3 mb-3">
+          <div class="col-12 col-md-6 col-lg-3 mb-3" onclick="go('broc')">
             <div class="card">
               <img
                 class="card-img-top img-fluid"
@@ -99,6 +99,9 @@
             <div id="counter"></div>
         </div>
       </div>
+    </div>
+    <div id="progress">
+      <div id="progressor"></div>
     </div>
 
     <!-- Bootstrap JavaScript Libraries -->
