Styled stories page, almost done doing it.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-3 mb-3">
+          <div class="col-12 col-md-6 col-lg-3 mb-3" onclick="go('job')">
             <div class="card">
               <img
                 class="card-img-top img-fluid"
@@ -69,7 +69,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-3 mb-3">
+          <div class="col-12 col-md-6 col-lg-3 mb-3" onclick="go('news')">
             <div class="card">
               <img
                 class="card-img-top img-fluid"
@@ -91,7 +91,7 @@
         </div>
         <div class="row">
           <div id="prompt" class="col-10 col-md-6 col-lg-4">
-            <h1 id="header">Hello</h1>
+            <h1 id="header">//promptHeader//</h1>
             <div class="inputs">
               <input type="text" id="textInp" />
               <input type="submit" id="submit" onclick="entered()" />
