made more minor tweaks

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h1 id="header">//promptHeader//</h1>
             <div class="inputs">
               <input type="text" id="textInp" />
-              <input type="submit" id="submit" onclick="entered()" />
+              <input type="submit" id="submit" value="enter" onclick="entered()" />
             </div>
             <div id="counter"></div>
         </div>
