--- a/index.html
+++ b/index.html
@@ -96,12 +96,14 @@
               <input type="text" id="textInp" />
               <input type="submit" id="submit" value="enter" onclick="entered()" />
             </div>
-            <div id="counter"></div>
+            <!-- <div id="counter"></div> -->
         </div>
       </div>
     </div>
     <div id="progress">
-      <div id="progressor"></div>
+      <div id="progressor">
+        <div id="percentage"></div>
+      </div>
     </div>
 
     <!-- Bootstrap JavaScript Libraries -->
