--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div id="prompt" class="col-10 col-md-6 col-lg-4">
             <h1 id="header">//promptHeader//</h1>
             <div class="inputs">
-              <input type="text" id="textInp" />
+              <input type="text" id="textInp" autofocus/>
               <input type="submit" id="submit" value="enter" onclick="entered()" />
             </div>
             <!-- <div id="counter"></div> -->
